# Sleex

./: .gitignore  CONTRIBUTING.md  PKGBUILD  README.md  TODO.md  test_network.cpp  test_nm.cpp  test_wifi.qml  test_wifi_debug.sh  test_wifi_fix.sh
sleex-user-config/: PKGBUILD
src/share/sleex/: .gitignore  BatteryWarningOverlay.qml  CMakeLists.txt  GlobalStates.qml  greetd.qml  nohup.out  settings.qml  shell.qml  test.qml  welcome.qml
src/share/sleex/assets/: quotes.json
src/share/sleex/modules/.commonwidgets/: statusicons.js
src/share/sleex/modules/BatteryPopup/: BatteryPopup.qml
src/share/sleex/modules/ChargingPopup/: ChargingPopup.qml
src/share/sleex/modules/MediaOverlay/: MediaOverlay.qml
src/share/sleex/modules/background/: Background.qml  BackgroundContextMenu.qml  Clock.qml  DesktopIconContextMenu.qml  DesktopIconDelegate.qml  DesktopIcons.qml  PostIt.qml  PostItDelegate.qml  Quote.qml  WallpaperDisplay.qml  Watermark.qml
src/share/sleex/modules/bar/: ActiveWindow.qml  AudioOsd.qml  Bar.qml  BatteryPopup.qml  BluetoothIndicator.qml  BrightnessOsd.qml  BtPopup.qml  CircleUtilButton.qml  ClockWidget.qml  HyprlandXkbIndicator.qml  NotifIndicator.qml  Resource.qml  Resources.qml  StyledPopup.qml  SysTray.qml  SysTrayItem.qml  SysTrayMenu.qml  Workspaces.qml
src/share/sleex/modules/cheatsheet/: Cheatsheet.qml  CheatsheetKeybinds.qml  CheatsheetKeybindsCategory.qml
src/share/sleex/modules/common/: Appearance.qml  Config.qml  Directories.qml  Idle.qml  Persistent.qml  StyledComboBox.qml
src/share/sleex/modules/common/functions/: ColorUtils.qml  DesktopUtils.qml  StringUtils.qml
src/share/sleex/modules/common/widgets/: AudioDeviceSelectorButton.qml  CliphistImage.qml  ClippedFilledCircularProgress.qml  ConfigSelectionArray.qml  ConfigSpinBox.qml  ContentPage.qml  ContentSection.qml  ContentSubsection.qml  Favicon.qml  IconComboBox.qml  LightDarkPreferenceButton.qml  MaterialTextField.qml  MonitorTile.qml  NotificationGroup.qml  NotificationItem.qml  NotificationListView.qml  RippleButtonWithIcon.qml  RoundCorner.qml  ScrollingText.qml  SelectionGroupButton.qml  SettingUserInfo.qml  StyledBusyIndicator.qml  StyledComboBox.qml  StyledImage.qml  StyledScrollBar.qml  StyledSlider.qml  StyledSwitch.qml  StyledToolTip.qml  StyledToolTipContent.qml  TimePicker.qml  VolumeMixer.qml  WallpaperDisplay.qml  WindowDialog.qml  WindowDialogButtonRow.qml  WindowDialogParagraph.qml  WindowDialogSectionHeader.qml  WindowDialogSeparator.qml  WindowDialogSlider.qml  WindowDialogTitle.qml  notification_utils.js
src/share/sleex/modules/dashboard/: AiWidgetGroup.qml  CalendarWidgetGroup.qml  Dashboard.qml  DashboardTabs.qml  HomeWidgetGroup.qml  TodoWidgetGroup.qml
src/share/sleex/modules/dashboard/ai/: AiChat.qml
src/share/sleex/modules/dashboard/calendar/: CalendarAdd.qml  CalendarEdit.qml  CalendarHeaderButton.qml  CalendarTimeTable.qml  GhCalendar.qml  GhCalendarNoNet.qml
src/share/sleex/modules/dashboard/quickToggles/: BluetoothToggle.qml  GameMode.qml  IdleInhibitor.qml  NetworkToggle.qml  NightLight.qml
src/share/sleex/modules/dashboard/todo/: TaskList.qml  TodoItemActionButton.qml
src/share/sleex/modules/dashboard/weather/: Weather.qml  WeatherNoNet.qml  WeatherOff.qml
src/share/sleex/modules/dock/: Dock.qml  DockAppButton.qml  DockApps.qml  DockButton.qml  DockSeparator.qml
src/share/sleex/modules/lockscreen/: Lock.qml  LockContext.qml  LockSurface.qml
src/share/sleex/modules/mediaControls/: MediaControls.qml  PlayerControl.qml  PlayerControlBlank.qml  PlayerOff.qml
src/share/sleex/modules/notificationPopup/: NotificationPopup.qml
src/share/sleex/modules/onScreenDisplay/: OnScreenDisplayBrightness.qml  OnScreenDisplayVolume.qml  OsdValueIndicator.qml
src/share/sleex/modules/overview/: Overview.qml  OverviewWidget.qml  OverviewWindow.qml  SearchItem.qml  SearchWidget.qml
src/share/sleex/modules/polkit/: Polkit.qml  PolkitContent.qml
src/share/sleex/modules/screenCorners/: ScreenCorners.qml
src/share/sleex/modules/session/: Session.qml  SessionActionButton.qml  Timeout.qml
src/share/sleex/modules/settings/: About.qml  Applications.qml  BehaviorConfig.qml  Bluetooth.qml  Display.qml  Interface.qml  Privacy.qml  Sound.qml  Style.qml  Wifi.qml
src/share/sleex/modules/settings/displaySettings/: DisplaySettings.qml  MonitorItem.qml
src/share/sleex/modules/settings/volumeMixer/: VolumeMixer.qml
src/share/sleex/modules/sidebarLeft/: AiChat.qml  DescriptionBox.qml  SidebarLeft.qml
src/share/sleex/modules/sidebarLeft/aiChat/: AiMessage.qml  AnnotationSourceButton.qml  MessageCodeBlock.qml  MessageTextBlock.qml  MessageThinkBlock.qml
src/share/sleex/modules/virtualKeyboard/: Notification.qml  OnscreenKeyboard.qml  VirtualKeyboard.sh  close  open
src/share/sleex/modules/wallpaperSelector/: WallpaperSelector.qml
src/share/sleex/plugins/: CMakeLists.txt
src/share/sleex/plugins/src/Sleex/: CMakeLists.txt
src/share/sleex/qml/Sleex/Services/: qmldir  sleex-services_qml_module_dir_map.qrc
src/share/sleex/scripts/: grimshot.sh  illuminance.sh  record-script.sh  set-dns.py
src/share/sleex/scripts/ai/: show-installed-ollama-models.sh
src/share/sleex/scripts/colors/: applycolor.sh  generate_colors_material.py  material-code-set-color.sh  switchwall.sh  term_gen_colors.sh
src/share/sleex/scripts/fht/: get_keybinds.py
src/share/sleex/scripts/hyprland/: get_keybinds.py
src/share/sleex/scripts/insomnia/: insomnia.sh
src/share/sleex/scripts/templates/term_emus/: alacritty.tpl  foot.tpl  ghostty.tpl  kitty.tpl  wezterm.tpl  zellij.tpl
src/share/sleex/services/: Ai.qml  AppSearch.qml  Audio.qml  Battery.qml  Brightness.qml  CalendarService.qml  ConfigLoader.qml  DateTime.qml  Fhtc.qml  FhtcKeybinds.qml  FirstRunExperience.qml  Github.qml  HyprlandData.qml  HyprlandKeybinds.qml  HyprlandXkb.qml  Idle.qml  LatexRenderer.qml  Monitors.qml  Network.qml  NightLight.qml  Notifications.qml  PersistentStateManager.qml  PolkitService.qml  Quotes.qml  ResourceUsage.qml  SystemInfo.qml  Todo.qml  Wallpapers.qml  Weather.qml  Ydotool.qml
(+99 files in other folders)
